<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotificationsFragment"
    android:background="@color/colorBackground">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.Guideline
            android:id="@+id/guideline34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline35"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline41"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline42"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <TextView
            android:id="@+id/txtNotificationsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/notifications"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline37"
            app:layout_constraintEnd_toStartOf="@+id/guideline35"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="@+id/guideline34"
            app:layout_constraintTop_toTopOf="@+id/guideline36"
            app:layout_constraintVertical_bias="0.66" />

        <TextView
            android:id="@+id/txtNotifLowBatt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/bater_a_baja"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline38"
            app:layout_constraintStart_toStartOf="@+id/guideline34"
            app:layout_constraintTop_toTopOf="@+id/guideline37" />

        <TextView
            android:id="@+id/txtNotifMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nueva_medici_n"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline42"
            app:layout_constraintStart_toStartOf="@+id/guideline34"
            app:layout_constraintTop_toTopOf="@+id/guideline39" />

        <TextView
            android:id="@+id/txtNotifMarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/nuevo_marcador"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline41"
            app:layout_constraintStart_toStartOf="@+id/guideline34"
            app:layout_constraintTop_toTopOf="@+id/guideline40" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65" />

        <TextView
            android:id="@+id/txtNotifConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/connection_lost"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline47"
            app:layout_constraintStart_toStartOf="@+id/guideline34"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <Switch
            android:id="@+id/swtNotifLowBatt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toTopOf="@+id/guideline38"
            app:layout_constraintEnd_toStartOf="@+id/guideline35"
            app:layout_constraintHorizontal_bias="0.864"
            app:layout_constraintStart_toEndOf="@+id/txtNotifLowBatt"
            app:layout_constraintTop_toTopOf="@+id/guideline37"
            app:layout_constraintVertical_bias="0.285" />

        <Switch
            android:id="@+id/swtNotifMeasure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toTopOf="@+id/guideline42"
            app:layout_constraintEnd_toStartOf="@+id/guideline35"
            app:layout_constraintHorizontal_bias="0.834"
            app:layout_constraintStart_toEndOf="@+id/txtNotifMeasure"
            app:layout_constraintTop_toTopOf="@+id/guideline39"
            app:layout_constraintVertical_bias="0.333" />

        <Switch
            android:id="@+id/swtNotifMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toTopOf="@+id/guideline41"
            app:layout_constraintEnd_toStartOf="@+id/guideline35"
            app:layout_constraintHorizontal_bias="0.828"
            app:layout_constraintStart_toEndOf="@+id/txtNotifMarks"
            app:layout_constraintTop_toTopOf="@+id/guideline40"
            app:layout_constraintVertical_bias="0.666" />

        <Switch
            android:id="@+id/swtNotifConnection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintBottom_toTopOf="@+id/guideline47"
            app:layout_constraintEnd_toStartOf="@+id/guideline35"
            app:layout_constraintHorizontal_bias="0.832"
            app:layout_constraintStart_toEndOf="@+id/txtNotifConnection"
            app:layout_constraintTop_toTopOf="@+id/guideline29"
            app:layout_constraintVertical_bias="0.666" />
    </android.support.constraint.ConstraintLayout>



</FrameLayout>